--- a/README.me
+++ b/README.me
@@ -6,12 +6,4 @@ Dependencies:
 selenium
 json
 
-Note: all scripts were run in the enclosing directory of that script
-
-for the server content generation
-
-run pipeline.py inside crawler.py
-
-for the sinatra server
-
-run ruby app.rb inside /server
+run pipeline.py
